--- a/index.html
+++ b/index.html
@@ -33,55 +33,25 @@
                 max-height: 800px;
                 height: auto;
             }
-            #desktop-vid {
+            #bgVide{
                 object-fit: contain;
-                display: block;
-            }
-            #mobile-vid {
-                display: none;
             }
         }
 
-        /* In between Mobile and Desktops */
-        @media only screen and (max-width:1199px) and (min-width:551px) {
-            #desktop-vid {
-                display: block;
-            }
-            #mobile-vid {
-                display: none;
-            }
-        }
-
-        /* For Mobile */
-        @media only screen and (max-width:550px) {
-            .video-container {
-                height: 570px;
-            }
-
-            #desktop-vid {
-                display: none;
-            }
-
-            #mobile-vid {
-                display: block;
-            }
-        }
     </style>
 </head>
 
 <body>
     <div>
         <div class="video-container">
-            <video id="mobile-vid" autoplay loop muted playsinline>
-                <source src="mobile.mp4" type="video/mp4" />
-            </video>
-            <!-- We can add a 3rd source or N number of sources and conditionally show them based on screen sizes -->
-            <video id="desktop-vid" autoplay loop muted playsinline>
-                <source src="video.mp4" type="video/mp4" />
+            <video id="bgVideo" autoplay loop muted playsinline preload="auto">
+                <source src="mobile.mp4" id="bgVideoSource" type="video/mp4" />
+                <img src="" id="bgVideoCover" title="Your browser doesn't support video element" alt="">
             </video>
         </div>
     </div>
     <h1>Responsive video</h1>
+   <script src="responsiveVideo.js"></script>
 </body>
 
 </html>
