--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 max-height: 800px;
                 height: auto;
             }
-            #bgVide{
+            #bgVideo{
                 object-fit: contain;
             }
         }
