--- a/index.html
+++ b/index.html
@@ -1,57 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        video {
-            position: relative;
-            max-width: 100%;
-            min-height: 100%;
-            object-fit: cover;
-            display: block;
-            width: 100%;
-        }
-
-        .video-container {
-            width: 100%;
-            height: 670px;
-            overflow: hidden;
-        }
-
-        /* For desktops */
-        @media only screen and (min-width:1200px) {
-            .video-container {
-                max-height: 800px;
-                height: auto;
-            }
-            #bgVideo{
-                object-fit: contain;
-            }
-        }
-
-    </style>
 </head>
-
 <body>
-    <div>
-        <div class="video-container">
-            <video id="bgVideo" autoplay loop muted playsinline preload="auto">
-                <source src="mobile.mp4" id="bgVideoSource" type="video/mp4" />
-                <img src="" id="bgVideoCover" title="Your browser doesn't support video element" alt="">
-            </video>
-        </div>
-    </div>
-    <h1>Responsive video</h1>
-   <script src="responsiveVideo.js"></script>
+    <object data="./A_Useful_Fly_Trap.pdf" style="width:100%; height:80vh"></object>
 </body>
-
 </html>
