--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <object data="./A_Useful_Fly_Trap.pdf" style="width:100%; height:80vh"></object>
+    <object data="./A_Useful_Fly_Trap.pdf" style="width:100%; height:80vh"></object>
+    <iframe src="./A_Useful_Fly_Trap.pdf" frameborder="0"></iframe>
 </body>
 </html>
